# nse-xbrl-parser

./: AGENTS.md  README.md  debug_nse.html  debug_nse2.html  fix_parser2.py  main.py  pyproject.toml  sample_qip.json
.context/: ARCHITECTURE.md  CHANGELOG.md  CONVENTIONS.md  DESIGN.md  OVERVIEW.md
.github/workflows/: update_taxonomy.yml
scripts/: build_golden_taxonomy.py  debug_html.py  test_httpx_bypass.py  update_taxonomies.py
src/nse_xbrl_parser/: __init__.py  parser.py
src/nse_xbrl_parser/golden_taxonomy_v1/: in-capmkt-ent-2022-06-30.xsd  in-capmkt-pre-2023-03-31.xml
src/nse_xbrl_parser/golden_taxonomy_v1/Buyback_Tender_Route/: in-capmkt-ent-2023-03-31.xsd  in-capmkt-roles-2023-03-31.xsd
src/nse_xbrl_parser/golden_taxonomy_v1/FCCB_IP/: in-capmkt-def-2022-06-30.xml
src/nse_xbrl_parser/golden_taxonomy_v1/FCCB_Listing/: in-capmkt-ent-2022-06-30.xsd
src/nse_xbrl_parser/golden_taxonomy_v1/PreferentialIssue_IP/: in-capmkt-ent-2022-06-30.xsd  in-capmkt-pre-2022-06-30.xml  in-capmkt-roles-2022-06-30.xsd
src/nse_xbrl_parser/golden_taxonomy_v1/PreferentialIssue_Listing/: in-capmkt-def-2022-06-30.xml  in-capmkt-ent-2022-06-30.xsd  in-capmkt-roles-2022-06-30.xsd
src/nse_xbrl_parser/golden_taxonomy_v1/QIP_IP/: in-capmkt-ent-2022-06-30.xsd  in-capmkt-pre-2022-06-30.xml  in-capmkt-roles-2022-06-30.xsd
src/nse_xbrl_parser/golden_taxonomy_v1/QIP_Listing/: in-capmkt-ent-2022-06-30.xsd
src/nse_xbrl_parser/golden_taxonomy_v1/core/: in-capmkt.xsd  (+2 more)
src/nse_xbrl_parser/taxonomies/: in-capmkt-def-2022-06-30.xml  in-capmkt-roles-2022-06-30.xsd
tests/: test_parser.py
(+23 files in other folders)
