[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nse-xbrl-parser"
version = "0.1.0"
description = "High-performance NSE XBRL taxonomy resolution and parsing engine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arelle-release>=2.38.17",
    "bs4>=0.0.2",
    "httpx[http2]>=0.28.1",
    "lxml>=5.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nse_xbrl_parser"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/taxonomies", "README.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]
